# bevy_template

./: Cargo.toml
src/: main.rs  music.rs  util.rs
src/graphics/: mod.rs  palette.rs  pixel.rs  text.rs
src/screens/: text.rs  title.rs
