[package]
name = "bevy_template"
version = "0.0.0"
authors = ["yopox <yopoxdev@gmail.com>"]
description = ""
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_audio", "bevy_asset", "bevy_pbr", "bevy_winit", "bevy_text", "png", "vorbis", "x11", "webgl2"
] }
bevy_asset_loader = { version = "0.20", default-features = false, features = ["2d"] }
bevy_common_assets = { version = "0.10", features = ["ron"] }

lazy_static = "1.4"
strum = "0.26"
strum_macros = "0.26"

rand = { version = "0.8", features = ["alloc"]}

console_error_panic_hook = "0.1.7"
